--- a/book_store/book/templates/store_book.html
+++ b/book_store/book/templates/store_book.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-<div style="width: 50%; margin: auto;">
+<div style="width: 50%; margin: auto;">]
       <h1>Welcome To Mariroko.com</h1>
     <form method="post">
         {% csrf_token %}
